
=item *

HDR/XHDR/XPAT answers are now robust when the overview database is
inconsistent.  When the overview schema was modified without the overview
database being rebuilt, wrong results could be returned for extra fields
(especially a random portion of some other header).  The desired header
name is now explicitly searched in the overview information.

=item *

The default path for TLS certificates has changed from I<pathlib> to
I<pathetc>.  It only affects new INN installations or generations of
certificates with C<make cert>.  Besides, a default value has been
added to I<tlscapath> because it is required by B<nnrpd> when TLS
is used.

=back

=head1 Upgrading from 2.4 to 2.5

The following changes require your full attention because a manual intervention
may be needed:

=over 2

=item *

In order to process control messages, B<controlchan> now needs the
C<MIME::Parser> module.  Packages are available from most distributions,
or you can install the module directly from CPAN (C<MIME-tools> in
F<modules/by-module/MIME/>, for instance on ftp.perl.org).

S<Perl 5.8.0> or later is recommended for INN.  If you are using an earlier
version, you will also need the C<Encode> module for correct processing of
control messages.  (It is included with Perl itself in 5.8.0 and later.)

=item *

Checkgroups control messages are now differently handled by B<controlchan>:
all matching lines in F<control.ctl> will be used for a given checkgroups
and a B<doit> action will really be executed (adding, removing and changing
the status of newsgroups).  You should make sure that your local
configuration does not rely on the previous behaviour of only mailing
changes, without actually performing them.

=item *

You should use the new F<control.ctl.local> file shipped with INN in
I<pathetc> and, at the same time, update your F<control.ctl> and
F<moderators> files.  Also make sure that your F<active.times>,
F<distrib.pats> and F<newsgroups> files are properly encoded in UTF-8, as